Update contact link to use new URL

--- a/index.html
+++ b/index.html
@@ -156,12 +156,10 @@
         <div class="container">
           <h2>Kontakt</h2>
           <p class="sub">
-            Besök
-            <a href="https://www.akutduon.se" target="_blank"
-              >www.akutduon.se</a
-            >
-            så hjälper vi ditt företag eller förening att hålla er uppdaterade i
-            Hjärt- och Lungräddning.
+          Besök
+          <a href="https://akutduon.se" target="_blank">akutduon.se</a>
+          så hjälper vi ditt företag eller förening att hålla er uppdaterade i
+          Hjärt- och Lungräddning.
           </p>
           <div class="grid cols-2">
             <div class="card">
