--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
 
               <div class="space-y-4">
                 <a
-                  href="tel:0101234567"
+                  href="tel:0703026096"
                   class="flex items-center gap-4 p-4 bg-white rounded-lg shadow-card border border-border/50 hover:border-accent/30 transition-colors group"
                 >
                   <div
@@ -1014,7 +1014,7 @@
                 </a>
 
                 <a
-                  href="mailto:info@akutduon.se"
+                  href="mailto:strandbergdaniel@hotmail.com"
                   class="flex items-center gap-4 p-4 bg-white rounded-lg shadow-card border border-border/50 hover:border-accent/30 transition-colors group"
                 >
                   <div
@@ -1105,7 +1105,7 @@
                     d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
                   />
                 </svg>
-                <span>010-123 45 67</span>
+                <span>0703026096</span>
               </div>
               <div class="flex items-center gap-2">
                 <svg
@@ -1121,7 +1121,7 @@
                     d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
                   />
                 </svg>
-                <span>info@akutduon.se</span>
+                <span>strandbergdaniel@hotmail.com</span>
               </div>
             </div>
           </div>
