--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
                   </div>
                   <div>
                     <div class="text-sm text-gray-600">Ring oss</div>
-                    <div class="text-lg font-semibold">010-123 45 67</div>
+                    <div class="text-lg font-semibold">070 302 60 96</div>
                   </div>
                 </a>
 
@@ -1036,7 +1036,7 @@
                   </div>
                   <div>
                     <div class="text-sm text-gray-600">E-posta oss</div>
-                    <div class="text-lg font-semibold">info@akutduon.se</div>
+                    <div class="text-lg font-semibold">strandbergdaniel@hotmail.com</div>
                   </div>
                 </a>
               </div>
