--- a/index.html
+++ b/index.html
@@ -932,7 +932,6 @@
             </form>
           </div>
 
-          <!-- right side left unchanged -->
           <div class="flex flex-col justify-center space-y-8">
             <div>
               <h3 class="text-2xl font-semibold mb-6">Eller ring oss direkt</h3>
@@ -974,11 +973,86 @@
 
     <footer class="bg-primary text-white py-12">
       <div class="container mx-auto px-4">
-        <!-- unchanged footer content -->
+<div class="grid md:grid-cols-3 gap-8">
+          <div>
+            <div class="flex items-center gap-2 mb-4">
+              <svg
+                class="w-6 h-6"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
+                />
+              </svg>
+              <h3 class="text-xl font-bold">Akutduon</h3>
+            </div>
+            <p class="text-white/80 text-sm">
+              Certifierade instruktörer med över 20 års erfarenhet inom
+              ambulanssjukvård och räddningstjänst.
+            </p>
+          </div>
+
+          <div>
+            <h4 class="font-semibold mb-4">Certifieringar</h4>
+            <ul class="space-y-2 text-sm text-white/80">
+              <li>Svenska HLR-rådet</li>
+              <li>Certifierade instruktörer</li>
+              <li>20+ års erfarenhet</li>
+            </ul>
+          </div>
+
+          <div>
+            <h4 class="font-semibold mb-4">Kontakt</h4>
+            <div class="space-y-2 text-sm text-white/80">
+              <div class="flex items-center gap-2">
+                <svg
+                  class="w-4 h-4"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
+                  />
+                </svg>
+                <span>0703026096</span>
+              </div>
+              <div class="flex items-center gap-2">
+                <svg
+                  class="w-4 h-4"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                  />
+                </svg>
+                <span>strandbergdaniel@hotmail.com</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="border-t border-white/20 mt-8 pt-8 text-center text-sm text-white/60"
+        >
+          © <span id="year"></span> Akutduon. Alla rättigheter förbehållna.
+        </div>
       </div>
     </footer>
 
-    <!-- ✅ UPDATED SCRIPT ONLY -->
     <script>
       function toggleMenu() {
         const menu = document.querySelector(".mobile-menu");
